--- a/index3.html
+++ b/index3.html
@@ -60,7 +60,7 @@
 
 		<h2>Animacje:</h2>
 		
-		<iframe src="img/anime.mp4"></iframe>
+		<video src="img/anime.mp4"></video>
 		<iframe src="img/anime2.mp4"></iframe>
 		 <div class="container"> 
 		<iframe class="responsive-iframe" src="img/anime-plakaty.mp4"></iframe>
