--- a/index3.html
+++ b/index3.html
@@ -60,9 +60,8 @@
 
 		<h2>Animacje:</h2>
 		
-		<video width="640" height="360" controls>
-		<source src="img/anime.mp4" type="video/mp4">
-		</video>
+		<video width="640" height="360" src="img/anime.mp4" type="video/mp4"></video>
+		
 <!-- 		<iframe src="img/anime2.mp4"></iframe>
 		 <div class="container"> 
 		<iframe class="responsive-iframe" src="img/anime-plakaty.mp4"></iframe>
