--- a/index3.html
+++ b/index3.html
@@ -62,10 +62,10 @@
 		
 		<video width="640" height="360" src="img/anime.mp4" type="video/mp4"></video>
 		
-		<video width="640" height="360" src="img/anime2.mp4" type="video/mp4"></video>
+<!-- 		<video width="640" height="360" src="img/anime2.mp4" type="video/mp4"></video>
 		
 		<video width="360" height="360" src="img/anime-plakaty.mp4" type="video/mp4"></video>
-		
+		 -->
 <!-- 		<iframe src="img/anime2.mp4"></iframe>
 		 <div class="container"> 
 		<iframe class="responsive-iframe" src="img/anime-plakaty.mp4"></iframe>
