--- a/index3.html
+++ b/index3.html
@@ -60,7 +60,9 @@
 
 		<h2>Animacje:</h2>
 		
-		<video width="640" height="360" src="img/anime.mp4" type="video/mp4"></video>
+		<video width="640" height="360" controls>
+		<source src="img/anime.mp4" type="video/mp4">
+		</video>
 		
 <!-- 		<video width="640" height="360" src="img/anime2.mp4" type="video/mp4"></video>
 		
