--- a/index3.html
+++ b/index3.html
@@ -60,8 +60,12 @@
 
 		<h2>Animacje:</h2>
 		
-		<video width="640" height="360" controls>
+		<video controls>
 		<source src="img/anime.mp4" type="video/mp4">
+		</video>
+		
+		<video controls>
+		<source src="img/anime2.mp4" type="video/mp4">
 		</video>
 		
 <!-- 		<video width="640" height="360" src="img/anime2.mp4" type="video/mp4"></video>
