--- a/index3.html
+++ b/index3.html
@@ -31,6 +31,7 @@
 		<h2>Umiejętności:</h2>
 		<ul>
 			<li>znajomość programów pakietu Adobe: Ai, Ps, Id, Ae, Pr, Xd</li>
+			<li>znajomość programów AI: chat GPT-4, Midjourney, Runway, Pika Labs, Cap Cut, Adobe Express</li>
 			<li>znajomość zasad UI/UX, DTP</li>
 			<li>znajomość JavaScript, HTML, CSS, WordPress, SEO</li>
 			<li>kreatywność, proaktywność, komunikatywność, praca pod presją, praca w grupie</li>
