--- a/index3.html
+++ b/index3.html
@@ -68,6 +68,10 @@
 		<video controls>
 		<source src="img/anime2.mp4" type="video/mp4">
 		</video>
+
+		<video controls>
+		<source src="img/typer.mp4" type="video/mp4">
+		</video>
 		
 <!-- 		<video width="640" height="360" src="img/anime2.mp4" type="video/mp4"></video>
 		
