--- a/index3.html
+++ b/index3.html
@@ -82,7 +82,17 @@
 		<iframe class="responsive-iframe" src="img/anime-plakaty.mp4"></iframe>
 		</div> -->
 
-
+		<h2>stworzone we współpracy z AI:</h2>
+		<img src="img/love.png">
+		<img src="img/glinki.png">
+		<img src="img/tiger.png">
+		<img src="img/terrace.png">
+		<video controls>
+		<source src="img/runtoast.mp4" type="video/mp4">
+		</video>
+		<video controls>
+		<source src="img/pikatoast.mp4" type="video/mp4">
+		</video>
 
 		<!-- web designs -->
 
