--- a/index3.html
+++ b/index3.html
@@ -90,9 +90,9 @@
 		<video controls>
 		<source src="img/runtoast.mp4" type="video/mp4">
 		</video>
-		<video controls>
+		<video2 controls>
 		<source src="img/pikatoast.mp4" type="video/mp4">
-		</video>
+		</video2>
 
 		<!-- web designs -->
 
