--- a/index3.html
+++ b/index3.html
@@ -90,7 +90,11 @@
 		<video controls>
 		<source src="img/runtoast.mp4" type="video/mp4">
 		</video>
-		<video controls>
+		<video controls
+			style="width:360px; height:540px; outline:none;
+			margin-bottom: 170px;
+			margin-left: 170px;
+			margin-top: 100px;">
 		<source src="img/pikatoast.mp4" type="video/mp4">
 		</video>
 
